--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,7 +9,7 @@ jobs:
       - name: Check out repository code
         uses: actions/checkout@v4
 
-      - uses: actions/setup-java@v4
+        uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '21'
@@ -20,7 +20,7 @@ jobs:
         run: java -version
         working directory: backend
 
-      - name: List files in the directory
+      -name: List files in the directory
         run: |
           ls ${{ github.workspace }}/backend
-
+      - run: echo "🍏 This job's status is ${{ job.status }}."
