--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -1,15 +1,15 @@
-name: Build Beta Version
-run-name: ${{ github.actor }} builds application
+name: Build Beta Version of qui
 on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    permissions: write-all
+    runs-on: ubuntu-22.04
     steps:
       - name: Check out repository code
         uses: actions/checkout@v4
 
-        uses: actions/setup-java@v4
+      - uses: actions/setup-java@v4
         with:
           distribution: 'temurin'
           java-version: '21'
@@ -17,10 +17,23 @@ jobs:
           cache-dependency-path: 'backend/pom.xml'
 
       - name: compile
-        run: java -version
-        working directory: backend
+        working-directory: backend
+        run: mvn -B package
 
-      -name: List files in the directory
+      - name: List files in the repository
         run: |
-          ls ${{ github.workspace }}/backend
+          ls -l ${{ github.workspace }}/backend/target
       - run: echo "🍏 This job's status is ${{ job.status }}."
+
+      - name: Upload binaries to release
+        id: upload
+        uses: svenstaro/upload-release-action@v2
+        with:
+          repo_token: ${{ secrets.GITHUB_TOKEN }}
+          file_glob: true
+          overwrite: true
+          prerelease: true
+          body: "Intermediate Release for Sprint Review"
+          file: backend/target/*-runner.jar
+#         tag: ${{ github.ref }}
+
